--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-[![OpenSSF Scorecard](https://api.scorecard.dev/projects/github.com/bkmgdotcom/project-examples/badge)](https://scorecard.dev/viewer/?uri=github.com/bkmgdotcom/project-examples)
+[![OpenSSF Scorecard](https://api.scorecard.dev/projects/github.com/bkmgdotcom/project-examples/badge](https://scorecard.dev/viewer/?uri=github.com/bkmgdotcom/project-examples)
 The JFrog Platform is an enterprise-ready automated end-to-end DevOps platform, ideal for managing all of your software releases from code to production.
 This repository includes sample projects, which can help you get started using the JFrog Platform.
